[build-system]
requires = ["setuptools >= 65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citylex"
version = "0.1.16"
description = "Builds a multi-source English lexicon"
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "Apache 2.0" }
authors = [{email = "kylebgorman@gmail.com"}, {name = "Kyle Gorman"}]
keywords = [
    "computational linguistics",
    "morphology",
    "natural language processing",
    "phonology",
    "phonetics",
    "speech",
    "language",
]
dependencies = [
    "black>=24.8.0",
    "build>=0.9.0",
    "flake8>=7.1.1",
    "flask>=3.0.3",
    "mypy>=1.11.2",
    "openpyxl>=3.1.5",
    "pandas>=1.2.2",
    "pynini>=2.1.6.post1",
    "pytest>=7.4.4",
    "requests>=2.25.1",
    "setuptools>=65.5.0",
    "twine>=3.7.1",
    "types-requests>=2.32.0.20240905",
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
homepage = "https://github.com/kylebgorman/citylex"

[tool.setuptools]
packages = ["citylex"]
